# gui-4-hemtt

./: AI_INSTRUCTIONS.md  CHANGES.md  README.md  clean_file.py  command_runner.py  config.json  config_store.py  hemtt_gui.py  pyproject.toml  tests.py
.github/: FUNDING.yml
.github/workflows/: code-quality.yml  python-validation.yml  release.yml
assets/: mock_screenshot.txt
tools/: convert_icon.py  tests.py
